--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -2,16 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/design_default_color_primary"/>
+            <solid android:color="@android:color/transparent"/>
+            <stroke android:width="1dp" android:color="@android:color/holo_blue_bright"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <stroke android:width="1dp" android:color="@color/black"/>
+            <solid android:color="@android:color/transparent"/>
+            <stroke android:width="1dp" android:color="@color/light_gray"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
