--- a/app/src/main/res/navigation/todo_nav.xml
+++ b/app/src/main/res/navigation/todo_nav.xml
@@ -46,5 +46,8 @@
             app:destination="@id/todoFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left" />
+        <argument
+            android:name="currentItem"
+            app:argType="com.codexo.todos.data.models.ToDoData" />
     </fragment>
 </navigation>
