--- a/app/src/main/res/navigation/todo_nav.xml
+++ b/app/src/main/res/navigation/todo_nav.xml
@@ -34,7 +34,9 @@
             android:id="@+id/action_addFragment_to_todoFragment"
             app:destination="@id/todoFragment"
             app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right" />
+            app:exitAnim="@anim/to_right"
+            app:popUpTo="@id/todoFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/updateFragment"
@@ -45,7 +47,9 @@
             android:id="@+id/action_updateFragment_to_todoFragment"
             app:destination="@id/todoFragment"
             app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left" />
+            app:exitAnim="@anim/to_left"
+            app:popUpTo="@id/todoFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="currentItem"
             app:argType="com.codexo.todos.data.models.ToDoData" />
